# wallet-buddhi-portal

./: .env.example  .replit  Anchor.toml  README.md  RESOURCES.md  design_guidelines.md  package-lock.json  package.json  replit.md
attached_assets/: DEVELOPER_ONBOARDING_1761063039412.md  design_guidelines_1761063058998.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BotCard.tsx  FeatureCard.tsx  Footer.tsx  Header.tsx  Hero.tsx  MobileNav.tsx  ProtectedTokens.tsx  TierBadge.tsx  TierCard.tsx  UpgradeModal.tsx  WalletButton-new.tsx  WalletButton.tsx  WalletConnectModal.tsx  WatchedTokens.tsx
client/src/components/examples/: Footer.tsx  (+9 more)
client/src/lib/: SolanaProvider.tsx  program-client.ts  wallet-adapter.ts  wallet-context-new.tsx  wallet-context.tsx  watchlist.ts
client/src/pages/: BadActors.tsx  Constellation.tsx  Dashboard.tsx  FAQ.tsx  GettingStarted.tsx  Home.tsx  Lab.tsx  Leaderboards.tsx  Security.tsx  Token.tsx  Wallet.tsx
programs/wallet-buddhi/: Cargo.toml
programs/wallet-buddhi/src/: lib.rs
server/: analyst-service.ts  bad-actor-registry.ts  bump-detector.ts  buyers-service.ts  constellation-service.ts  copycat-detector.ts  holders-service.ts  kinship-history-service.ts  payments.ts  program-service.ts  protected-tokens.ts  routes.ts  session-registry.ts  storage.ts  token-copycat-service.ts  token-service.ts  wallet-analyst-service.ts  wallet-service.ts
server/llm/: ollama-client.ts  provider.ts
server/social/: index.ts  telegram-provider.ts  twitter-provider.ts
shared/: schema.ts
tests/: wallet-buddhi.ts
