[package]
name = "wallet-buddhi"
version = "0.1.0"
description = "Wallet Buddhi on-chain user account management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wallet_buddhi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
